--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,10 @@ main ul li {
   letter-spacing: 1px;
 }
 
+main a {
+  color: #333;
+}
+
 .navbar-selected {
   box-shadow: 0 5px 5px rgba(0,0,0,.3);
 }
